// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmDialogBox snapshots tests renders component with customised locale 1`] = `
<ForwardRef(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <ForwardRef(DialogTitle)>
    ENG: Confirmation
  </ForwardRef(DialogTitle)>
  <ForwardRef(DialogContent)>
    <ForwardRef(DialogContentText)>
      ENG: Are you sure?
    </ForwardRef(DialogContentText)>
  </ForwardRef(DialogContent)>
  <ForwardRef(DialogActions)>
    <ForwardRef(Grid)
      container={true}
      spacing={1}
    >
      <Hidden
        smDown={true}
      >
        <ForwardRef(Grid)
          item={true}
          xs={true}
        />
      </Hidden>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          autoFocus={true}
          color="primary"
          data-testid="confirm-dialog-box"
          fullWidth={true}
          onClick={[Function]}
        >
          ENG: Yes
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          data-testid="alternate-dialog-box"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          ENG: Maybe
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          color="primary"
          data-testid="cancel-dialog-box"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          ENG: No
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(DialogActions)>
</ForwardRef(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests renders component with yes 1`] = `
<ForwardRef(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <ForwardRef(DialogTitle)>
    Confirmation
  </ForwardRef(DialogTitle)>
  <ForwardRef(DialogContent)>
    <ForwardRef(DialogContentText)>
      Are you sure?
    </ForwardRef(DialogContentText)>
  </ForwardRef(DialogContent)>
  <ForwardRef(DialogActions)>
    <ForwardRef(Grid)
      container={true}
      spacing={1}
    >
      <Hidden
        smDown={true}
      >
        <ForwardRef(Grid)
          item={true}
          xs={true}
        />
      </Hidden>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          autoFocus={true}
          color="primary"
          data-testid="confirm-dialog-box"
          fullWidth={true}
          onClick={[Function]}
        >
          Yes
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(DialogActions)>
</ForwardRef(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests renders component with yes/no buttons 1`] = `
<ForwardRef(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <ForwardRef(DialogTitle)>
    Confirmation
  </ForwardRef(DialogTitle)>
  <ForwardRef(DialogContent)>
    <ForwardRef(DialogContentText)>
      Are you sure?
    </ForwardRef(DialogContentText)>
  </ForwardRef(DialogContent)>
  <ForwardRef(DialogActions)>
    <ForwardRef(Grid)
      container={true}
      spacing={1}
    >
      <Hidden
        smDown={true}
      >
        <ForwardRef(Grid)
          item={true}
          xs={true}
        />
      </Hidden>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          autoFocus={true}
          color="primary"
          data-testid="confirm-dialog-box"
          fullWidth={true}
          onClick={[Function]}
        >
          Yes
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          color="primary"
          data-testid="cancel-dialog-box"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          No
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(DialogActions)>
</ForwardRef(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests renders component with yes/no/maybe buttons 1`] = `
<ForwardRef(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <ForwardRef(DialogTitle)>
    Confirmation
  </ForwardRef(DialogTitle)>
  <ForwardRef(DialogContent)>
    <ForwardRef(DialogContentText)>
      Are you sure?
    </ForwardRef(DialogContentText)>
  </ForwardRef(DialogContent)>
  <ForwardRef(DialogActions)>
    <ForwardRef(Grid)
      container={true}
      spacing={1}
    >
      <Hidden
        smDown={true}
      >
        <ForwardRef(Grid)
          item={true}
          xs={true}
        />
      </Hidden>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          autoFocus={true}
          color="primary"
          data-testid="confirm-dialog-box"
          fullWidth={true}
          onClick={[Function]}
        >
          Yes
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          data-testid="alternate-dialog-box"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Maybe
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          color="primary"
          data-testid="cancel-dialog-box"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          No
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(DialogActions)>
</ForwardRef(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests should have a proper style generator 1`] = `
Object {
  "alternateActionButtonClass": Object {
    "&:hover": Object {
      "backgroundColor": "test3",
    },
    "backgroundColor": "test2",
    "color": "test4",
  },
}
`;

exports[`ConfirmDialogBox snapshots tests should have a proper style generator 2`] = `
Object {
  "alternateActionButtonClass": Object {
    "&:hover": Object {
      "backgroundColor": undefined,
    },
    "backgroundColor": undefined,
    "color": undefined,
  },
}
`;

exports[`ConfirmDialogBox snapshots tests should have a proper style generator 3`] = `
Object {
  "alternateActionButtonClass": Object {
    "&:hover": Object {
      "backgroundColor": undefined,
    },
    "backgroundColor": undefined,
    "color": undefined,
  },
}
`;

exports[`ConfirmDialogBox snapshots tests should show and hide confirmation dialog 1`] = `
<ForwardRef(Dialog)
  open={true}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <ForwardRef(DialogTitle)>
    Confirmation
  </ForwardRef(DialogTitle)>
  <ForwardRef(DialogContent)>
    <ForwardRef(DialogContentText)>
      Are you sure?
    </ForwardRef(DialogContentText)>
  </ForwardRef(DialogContent)>
  <ForwardRef(DialogActions)>
    <ForwardRef(Grid)
      container={true}
      spacing={1}
    >
      <Hidden
        smDown={true}
      >
        <ForwardRef(Grid)
          item={true}
          xs={true}
        />
      </Hidden>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          autoFocus={true}
          color="primary"
          data-testid="confirm-dialog-box"
          fullWidth={true}
          onClick={[Function]}
        >
          Yes
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          color="primary"
          data-testid="cancel-dialog-box"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          No
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(DialogActions)>
</ForwardRef(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests should show and hide confirmation dialog 2`] = `
<ForwardRef(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <ForwardRef(DialogTitle)>
    Confirmation
  </ForwardRef(DialogTitle)>
  <ForwardRef(DialogContent)>
    <ForwardRef(DialogContentText)>
      Are you sure?
    </ForwardRef(DialogContentText)>
  </ForwardRef(DialogContent)>
  <ForwardRef(DialogActions)>
    <ForwardRef(Grid)
      container={true}
      spacing={1}
    >
      <Hidden
        smDown={true}
      >
        <ForwardRef(Grid)
          item={true}
          xs={true}
        />
      </Hidden>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          autoFocus={true}
          color="primary"
          data-testid="confirm-dialog-box"
          fullWidth={true}
          onClick={[Function]}
        >
          Yes
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          color="primary"
          data-testid="cancel-dialog-box"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          No
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(DialogActions)>
</ForwardRef(Dialog)>
`;
